--- a/simplex.html
+++ b/simplex.html
@@ -266,24 +266,24 @@ pre[data-line] .line-highlight[data-end]:after {
       <h1 class="mume-header" id="simplex">Simplex</h1>
 
 <p>The implemented simplex algorithm is based on the <a href="https://doi.org/10.1016/0169-7439(90)80112-J">modified simplex method</a>. The modified simplex algorithm is searching for the global optimum using a shape consisting of N+1 vertices, n is the number of dimensions that the simplex is being executed on. Each vertex has different coordinates. The coupling intensity of the vertices is measured on their own coordinates and sorted with N=N+1 as the best vertex with highest coupling intensity and N=0 as the vertex with the worst coupling intensity. The vertices are put in an list Points(n)</p>
-<img src="images\Simplex_coordinates.png" alt="drawing" width="500">
+<p><img src="https://github.com/convexmussel/wiki/blob/master/images/Simplex_coordinates.png?raw=true" alt="test"></p>
 <p><sub>C. Gabler, K. L. (1987). An optical alignment robot system. Proc. SPIE Integr. Packag. Optoelectron. Devices, vol. 703, 8-28.</sub></p>
 <p>L,M and H are the initial vertices of the vertex, L being the worst and H being the best.</p>
 <h2 class="mume-header" id="operation">Operation</h2>
 
-<img src="images\Simplex_flowchart.png" alt="drawing" width="500">
-<p><sub>C. Gabler, K. L. (1987). An optical alignment robot system. Proc. SPIE Integr. Packag. Optoelectron. Devices, vol. 703, 8-28.</sub></p>
-<p><img src="images\simplex2d.gif" alt="Simplex path 2d"><br>
-<img src="images\simplex3d.gif" alt="Simplex path 3d"></p>
-<p><img src="Equations\centroid.png" alt="test"></p>
-<p><img src="Equations\Reflection.PNG" alt="test"></p>
-<p><img src="Equations\Expention.PNG" alt="test"><br>
-<img src="Equations\incontraction.PNG" alt="test"><br>
-<img src="Equations\incentroid.PNG" alt="test"><br>
-<img src="Equations\inreflection.PNG" alt="test"><br>
-<img src="Equations\excontraction.PNG" alt="test"><br>
-<img src="Equations\excentroid.PNG" alt="test"><br>
-<img src="Equations\exreflection.PNG" alt="test"></p>
+<p><img src="https://github.com/convexmussel/wiki/blob/master/images/Simplex_flowchart.png?raw=true" alt="test"><br>
+<sub>C. Gabler, K. L. (1987). An optical alignment robot system. Proc. SPIE Integr. Packag. Optoelectron. Devices, vol. 703, 8-28.</sub></p>
+<p><img src="https://github.com/convexmussel/wiki/blob/master/images/simplex2d.gif?raw=true" alt="Simplex path 2d"><br>
+<img src="https://github.com/convexmussel/wiki/blob/master/images/simplex3d.gif?raw=true" alt="Simplex path 3d"></p>
+<p><img src="https://github.com/convexmussel/wiki/blob/master/Equations/centroid.PNG?raw=true" alt="test"></p>
+<p><img src="https://github.com/convexmussel/wiki/blob/master/Equations/Reflection.PNG?raw=true" alt="test"></p>
+<p><img src="https://github.com/convexmussel/wiki/blob/master/Equations/Expention.PNG?raw=true" alt="test"><br>
+<img src="https://github.com/convexmussel/wiki/blob/master/Equations/incontraction.PNG?raw=true" alt="test"><br>
+<img src="https://github.com/convexmussel/wiki/blob/master/Equations/incentroid.PNG?raw=true" alt="test"><br>
+<img src="https://github.com/convexmussel/wiki/blob/master/Equations/inreflection.PNG?raw=true" alt="test"><br>
+<img src="https://github.com/convexmussel/wiki/blob/master/Equations/excontraction.PNG?raw=true" alt="test"><br>
+<img src="https://github.com/convexmussel/wiki/blob/master/Equations/excentroid.PNG?raw=true" alt="test"><br>
+<img src="https://github.com/convexmussel/wiki/blob/master/Equations/exreflection.PNG?raw=true" alt="test"></p>
 
       </div>
       
